Добавлена валидация protobuf (validate.proto)
